# browser-research-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  demo-walkthrough.md  deployment.md  output-schema.md  product-brief.md  scoring-rubric.md  walkthrough.md
docs/screenshots/: README.md  source-api-json-response.html  source-quality-gates.html  source-sample-report.html
examples/: demo-command.sh  request.json  run-example.sh
examples/api-sample-output/: research-response.json
examples/sample-output/: report.md  summary.json
examples/sample-output/pages/: 01-unknown-url-98e34481.html  01-unknown-url-98e34481.json  01-vendor-security-117298b5.json  02-unknown-url-b1add7b5.html  02-unknown-url-b1add7b5.json  02-vendor-blog-0da05732.json  03-unknown-url-a25f56ca.html  03-unknown-url-a25f56ca.json  03-vendor-careers-b45230f2.json
scripts/: generate_screenshot_evidence.py
src/browser_research_agent/: __init__.py  agent.py  api.py  artifacts.py  cli.py  config.py  extractor.py  models.py  reporting.py  scoring.py
tests/: test_api.py  test_artifacts_and_errors.py  test_config_and_models.py  test_extraction_quality.py  test_extractor.py  test_reporting.py  test_runtime_flags.py  test_scoring.py  test_scoring_calibration.py  test_scoring_transparency.py
tests/fixtures/: vendor_blog.html  vendor_careers.html  vendor_security.html
